--- a/clase28/src/views/products/index.ejs
+++ b/clase28/src/views/products/index.ejs
@@ -1,21 +1,15 @@
 <%- include('../partials/header.ejs') %>
 
 <h1>Listado de productos</h1>
-
+<a href="/products/create">Crear auto</a>
 <ul>
-    <!-- <% for (let index = 0; index < carsList.length; index++) { %>
-        <li>
-            <a href="/products/<%= carsList[index].id %>"><%= carsList[index].name %></a>
-        </li>
-    <% } %>  -->
-
     <% carsList.forEach(auto => { %>
         <li>
             <a href="/products/<%= auto.id %>"><%= auto.name %></a>
             -
             <a href="/products/edit/<%= auto.id %>">Editar</a>
             -
-            <a href="/products/delete<%= auto.id %>">Eliminar</a>
+            <a href="/products/delete/<%= auto.id %>">Eliminar</a>
         </li>
     <% }) %>
 </ul>
