--- a/clase32/middl/src/views/auth/login.ejs
+++ b/clase32/middl/src/views/auth/login.ejs
@@ -10,6 +10,7 @@
     <form action="/login" method="post">
         <input type="email" name="email" placeholder="Email">
         <input type="password" name="password">
+        <input type="checkbox" name="rememberme" id="rememberme">Acordate porfa
         <button>Entrar</button>
     </form>
 </body>
