--- a/clase32/middl/src/views/user/profile.ejs
+++ b/clase32/middl/src/views/user/profile.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Profile</h1>
-    <span><%= user.name %></span>
-    <span><%= user.email %></span>
+    <span><%= locals.userLogged.name %></span>
+    <span><%= locals.userLogged.email %></span>
 </body>
 </html>
